Cut and copy sometimes don't work at X11 session
Affected version
Manjaro Linux
DISTRIB_RELEASE=19.0.2
mutter 3.34.4
X11 session, because I'm using Nvidia proprietary drivers.
Bug summary
Using LibreOffice, I founded this bug when trying to copy text (as you can check on the screencast). Sometimes the copy fails, resulting in the previous text being pasted.
Now I have to copy twice each time that I want to copy a text, just to be sure.
Steps to reproduce
- Open LibreOffice;
- Write some words;
- Copy one of them and paste, one by one;
What happened
Sometimes the previous text copied will be pasted.
What did you expect to happen
Paste the last text copied, every time.
Relevant logs, screenshots, screencasts etc.
Edited by Jeison Pandini